GKE/private/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-go
spec:
  type: LoadBalancer
  ports:
    - port: 9080
      targetPort: 8080
  selector:
    name: greeting-go
